# baseball.computer

./: .env  .gitignore  .sqlfluff  .sqlfluffignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  keras_sandbox.ipynb  manifest_to_copilot.py  pyproject.toml  scratch.ipynb
.codex/: config.toml
.gemini/: settings.json
.github/: actionlint.yaml
.github/workflows/: publish.yml
bc/: config.py  coverage-doc.json  dbt_project.yml  external_models.yaml  jinja_globals.py  loader.py  metadata.csv  qa_notes.md
bc/analyses/: fielder_advance_expectancy.sql  gb_babip_prediction.py  ground_ball_blame.sql  ground_ball_hits.sql  hit_vs_out_spray.sql  player_completeness.sql  runner_advance_expectancy.sql
bc/audits/: bounded_excluding_data_issues.sql  bounded_range.sql  relationships.sql  sum_consistency.sql  team_game_has_one_starter.sql  unique_grain.sql  valid_baseball_season.sql
bc/macros/: _box_score_data_issue.py  _docs.py  _env_to_model.py  _event_id_to_key.py  _init_db.py  _metric_table_body.py  _park_factors.py  _stat_lists.py  _team_game_data_issue.py  init_db.sql  metric_calcs.sql  metric_col_lists.sql  metric_table_body.sql  metrics_table_generator.sql  park_factors.sql  stat_lists.sql  summarize_tables.sql
bc/models/: doc_global_cols.md  doc_metric_calc.md  doc_stat_list.md  overview.md
bc/python_models/: __init__.py  _doc_lookup.py  _enum_types.py
bc/semantic/: __init__.py  _tables_common.py  tables.py
bc/tests/: test_backtest_set_miss.py  test_baserunning_cat_model.py  test_batted_location_cat_model.py  test_batted_trajectory_cat_model.py  test_bsl_semantic.py  test_config_paths.py  test_derived_metrics.py  test_event_pitching_flags.py  test_has_batting_bin_model.py  test_is_in_play_bin_model.py  test_is_win_bin_model.py  test_metric_builder.py  test_ml_features.py  test_modal_lineups.py  test_park_factor_builder.py  test_plate_appearance_cat_model.py  test_runs_following_num_model.py  test_synthetic_game_lineups.py  test_synthetic_transactions.py  test_team_game_results.py  test_team_game_start_info.py
blog/: blog.md
docs/: CNAME  catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
notes/: custom_test_todos.md  followups.md  llm-metadata.md  measuring_fielding.md  migration-evaluation.md  perf-deep-dive.md  perf-profile-report.md  phase-1-followups.md  phase-1-plan.md  phase-1.6-followups.md  phase-2-followups.md  phase-3-followups.md  phase-4-followups.md  phase-5-followups.md  phase-6-followups.md  possible_posts.md  synthetic-lineup-backtest-1871-1910.md  synthetic-lineup-optimizer-handoff.md  upgrade-spike.md
notes/spikes/: README.md
scripts/: _grid_one.py  add_doc_block_refs.py  audit_sweep.py  backtest_synthetic_lineups.py  create_web_db.py  diff_dbt_vs_sqlmesh.py  diff_known_flaky.json  diff_models.py  disk_analysis.py  generate_seed_yaml.py  grid_search.py  metric_generator.py  perf_run.py  preload_sources.py  profile_hotspots.py  publish_ducklake.py  run_lineup_optimizer.py  train_baserunning_cat.py  train_batted_location_cat.py  train_batted_trajectory_cat.py  train_has_batting_bin.py  train_is_in_play_bin.py  train_is_win_bin.py  train_plate_appearance_cat.py  train_runs_following_num.py  upload_ducklake.py
scripts/migration/: convert_models_to_sqlmesh.py  migrate_yaml_to_model_block.py  source_yml_to_external_models.py  wrap_jinja_models.py
tests/: test_diff_harness.py
timeball/: .sqlfluffignore  coverage-doc.json  dbt_project.yml  metadata.csv  package-lock.yml  packages.yml  schema.txt
timeball/analyses/: babip_by_count.sql  fielder_advance_expectancy.sql  fielder_location_shares.sql  gb_babip.sql  gb_babip_correlations.sql  grid.sql  ground_ball_blame.sql  ground_ball_hits.sql  hit_vs_out_spray.sql  hit_vs_out_spray_air.sql  outfield_hits.sql  player_completeness.sql  scratch.sql  unknown_fielding_locations.sql
timeball/macros/: event_id_to_key.sql  generate_base_model.sql  init_db.sql  metric_calcs.sql  metrics_table_generator.sql  stat_calcs.sql  stat_lists.sql  stats.sql  types.sql
timeball/models/: doc_global.md  doc_global_cols.md  doc_metric_calc.md  doc_stat_list.md  event_batting_stats.sql  (+2 more)
(+740 files in other folders)
