[project]
name = "baseball-computer"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
authors = [{ name = "David Roher", email = "david.roher@gmail.com" }]
dependencies = [
    "duckdb~=1.5.2",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "polars>=0.20.17",
    "pyarrow>=15.0.2",
    "statsmodels>=0.14.1",
    "recordlinkage>=0.16.0",
    "pyyaml>=6.0",
    "sqlmesh[lsp,ui,web]>=0.228.5",
]

[dependency-groups]
dev = [
    "sqlfluff>=3.0.3",
    "ipykernel>=6.25.2",
    "boto3>=1.34.45",
    "ruamel.yaml>=0.18.5",
]
# Phase 2: SQLMesh + Ibis is the build engine. boring-semantic-layer (in
# `spikes-bsl`) pins an incompatible sqlglot, so the two groups are
# mutually exclusive.
migration = [
    "sqlmesh>=0.234",
    "ibis-framework[duckdb]>=12.0",
    "polars>=1.31",
    "numba>=0.59",
    "pydantic>=2.7",
]
# Phase 6: Hamilton ML stack on top of migration. PyTorch backend for
# Keras 3 — MPS support ships in torch core, no tensorflow-metal /
# jax-metal plugin needed. Set KERAS_BACKEND=torch before importing
# keras (handled in python_models/ml/__init__.py).
migration-ml = [
    {include-group = "migration"},
    "apache-hamilton[visualization]>=1.90",
    "mlflow>=2.18",
    "scikit-learn>=1.5",
    "keras>=3.7",
    "torch>=2.5",
]
spikes-bsl = [
    "boring-semantic-layer>=0.3.12",
    "ibis-framework[duckdb]>=11.0",
]

[tool.uv]
package = false
conflicts = [
    [
        { group = "migration" },
        { group = "spikes-bsl" },
    ],
    [
        { group = "migration-ml" },
        { group = "spikes-bsl" },
    ],
]

[tool.pytest.ini_options]
testpaths = ["bc/tests"]
pythonpath = ["bc"]

[tool.pyright]
extraPaths = ["bc"]
